tracker-config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-tracker-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: student.44.206.234.141.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tracker-service
            port:
              number: 8000
